# Arcanoid_project

./: README.md
src/: CMakeLists.txt  clearEventsQueue.cpp  clearEventsQueue.hpp  main  main.cpp  platform.cpp  platform.hpp  score.txt
